Human stashing